[package]
name = "pfring-sys"
version = "0.0.1"
edition = "2018"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
description = "Bindings to PF_RING for GNU/Linux"
license = "MIT"
homepage   = "https://github.com/AliRezaBeigy/rust-pfring-sys"
repository = "https://github.com/AliRezaBeigy/rust-pfring-sys"
documentation = "https://docs.rs/pfring-sys/*/x86_64-apple-darwin/pfring_sys"
build = "build.rs"

[dependencies]
libc = "0.2.119"


[build-dependencies]
pkg-config = "0.3"